[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://fonts/Nanami.fnt" type="BitmapFont" id=2]
[ext_resource path="res://img/sprite2.png" type="Texture" id=3]
[ext_resource path="res://sounds/quest.ogg" type="AudioStream" id=4]

[node name="Inventory" type="TabContainer" groups=[
"inv",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 120.0
margin/right = 990.0
margin/bottom = 570.0
tab_align = 2
tabs_visible = true
script/script = ExtResource( 1 )

[node name="Status" type="Tabs" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0
custom_fonts/font = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Status"]

transform/pos = Vector2( 125, 205 )
transform/scale = Vector2( 3.40539, 3.40539 )
texture = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Status"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 250.0
margin/top = 20.0
margin/right = 470.0
margin/bottom = 295.0

[node name="Level" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 130.0
margin/bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "Battle level:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LevelVal" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 10.0
margin/right = 200.0
margin/bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Exp" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 40.0
margin/right = 130.0
margin/bottom = 66.0
custom_fonts/font = ExtResource( 2 )
text = "Exp:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ExpVal" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 40.0
margin/right = 200.0
margin/bottom = 66.0
custom_fonts/font = ExtResource( 2 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Strengh" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 80.0
margin/right = 130.0
margin/bottom = 106.0
custom_fonts/font = ExtResource( 2 )
text = "Strengh:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StrenghVal" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 80.0
margin/right = 200.0
margin/bottom = 106.0
custom_fonts/font = ExtResource( 2 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Agility" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 110.0
margin/right = 130.0
margin/bottom = 136.0
custom_fonts/font = ExtResource( 2 )
text = "Agility:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AgilityVal" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 110.0
margin/right = 200.0
margin/bottom = 136.0
custom_fonts/font = ExtResource( 2 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Endurance" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 140.0
margin/right = 130.0
margin/bottom = 166.0
custom_fonts/font = ExtResource( 2 )
text = "Endurance:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EnduranceVal" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 140.0
margin/right = 200.0
margin/bottom = 166.0
custom_fonts/font = ExtResource( 2 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Luck" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 170.0
margin/right = 130.0
margin/bottom = 196.0
custom_fonts/font = ExtResource( 2 )
text = "Luck:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LuckVal" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 170.0
margin/right = 200.0
margin/bottom = 196.0
custom_fonts/font = ExtResource( 2 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Speed" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 200.0
margin/right = 130.0
margin/bottom = 226.0
custom_fonts/font = ExtResource( 2 )
text = "Speed:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpeedVal" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 200.0
margin/right = 200.0
margin/bottom = 226.0
custom_fonts/font = ExtResource( 2 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Money" type="Label" parent="Status/Panel"]

rect/rotation = -0.0227997
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 240.0
margin/right = 130.0
margin/bottom = 266.0
custom_fonts/font = ExtResource( 2 )
text = "Money:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MoneyVal" type="Label" parent="Status/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = 240.0
margin/right = 200.0
margin/bottom = 266.0
custom_fonts/font = ExtResource( 2 )
text = "200"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel 2" type="Panel" parent="Status"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 480.0
margin/top = 20.0
margin/right = 700.0
margin/bottom = 305.0

[node name="RichTextLabel" type="RichTextLabel" parent="Status/Panel 2"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 165.0
margin/bottom = 265.0
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode/enabled = false
bbcode/bbcode = "One-handed
Two-handed
Two hands
Block
Parry
Evade"
visible_characters = -1
percent_visible = 1.0

[node name="RichTextLabel1" type="RichTextLabel" parent="Status/Panel 2"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 175.0
margin/top = 11.0
margin/right = 215.0
margin/bottom = 266.0
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode/enabled = false
bbcode/bbcode = "0
0
0
0
0
0"
visible_characters = -1
percent_visible = 1.0

[node name="Stats" type="VBoxContainer" parent="Status/Panel 2"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 210.0
margin/bottom = 186.0
alignment = 0

[node name="Hand-to-Hand" type="HBoxContainer" parent="Status/Panel 2/Stats"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 26.0
alignment = 0

[node name="Name" type="Label" parent="Status/Panel 2/Stats/Hand-to-Hand"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 144.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Hand-to-Hand"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Status/Panel 2/Stats/Hand-to-Hand"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 148.0
margin/top = 0.0
margin/right = 198.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="One-handed" type="HBoxContainer" parent="Status/Panel 2/Stats"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 200.0
margin/bottom = 56.0
alignment = 0

[node name="Name" type="Label" parent="Status/Panel 2/Stats/One-handed"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "One-handed"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Status/Panel 2/Stats/One-handed"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Two-handed" type="HBoxContainer" parent="Status/Panel 2/Stats"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 60.0
margin/right = 200.0
margin/bottom = 86.0
alignment = 0

[node name="Name" type="Label" parent="Status/Panel 2/Stats/Two-handed"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Two-handed"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Status/Panel 2/Stats/Two-handed"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Two hands" type="HBoxContainer" parent="Status/Panel 2/Stats"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 90.0
margin/right = 200.0
margin/bottom = 116.0
alignment = 0

[node name="Name" type="Label" parent="Status/Panel 2/Stats/Two hands"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Two hands"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Status/Panel 2/Stats/Two hands"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Light Armor" type="HBoxContainer" parent="Status/Panel 2/Stats"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 200.0
margin/bottom = 146.0
alignment = 0

[node name="Name" type="Label" parent="Status/Panel 2/Stats/Light Armor"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Light Armor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Status/Panel 2/Stats/Light Armor"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Heavy Armor" type="HBoxContainer" parent="Status/Panel 2/Stats"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 150.0
margin/right = 200.0
margin/bottom = 176.0
alignment = 0

[node name="Name" type="Label" parent="Status/Panel 2/Stats/Heavy Armor"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Heavy Armor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Status/Panel 2/Stats/Heavy Armor"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Block" type="HBoxContainer" parent="Status/Panel 2/Stats"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 180.0
margin/right = 200.0
margin/bottom = 206.0
alignment = 0

[node name="Name" type="Label" parent="Status/Panel 2/Stats/Block"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Block"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Status/Panel 2/Stats/Block"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Parry" type="HBoxContainer" parent="Status/Panel 2/Stats"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 210.0
margin/right = 200.0
margin/bottom = 236.0
alignment = 0

[node name="Name" type="Label" parent="Status/Panel 2/Stats/Parry"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Parry"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Status/Panel 2/Stats/Parry"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Evade" type="HBoxContainer" parent="Status/Panel 2/Stats"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 240.0
margin/right = 200.0
margin/bottom = 266.0
alignment = 0

[node name="Name" type="Label" parent="Status/Panel 2/Stats/Evade"]

rect/min_size = Vector2( 140, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Evade"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Value" type="Label" parent="Status/Panel 2/Stats/Evade"]

rect/min_size = Vector2( 50, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 144.0
margin/top = 0.0
margin/right = 194.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Equip" type="Tabs" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Sprite" type="Sprite" parent="Equip"]

transform/pos = Vector2( 125, 205 )
transform/scale = Vector2( 3.40539, 3.40539 )
texture = ExtResource( 3 )

[node name="LeftHand" type="ItemList" parent="Equip"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 165.0
margin/top = 181.0
margin/right = 240.0
margin/bottom = 256.0

[node name="RightHand" type="ItemList" parent="Equip"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 182.0
margin/right = 78.0
margin/bottom = 257.0

[node name="Legs" type="ItemList" parent="Equip"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 85.0
margin/top = 235.0
margin/right = 160.0
margin/bottom = 310.0

[node name="Feets" type="ItemList" parent="Equip"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 319.0
margin/right = 159.0
margin/bottom = 394.0

[node name="Body" type="ItemList" parent="Equip"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 14.0
margin/right = 159.0
margin/bottom = 89.0

[node name="Head" type="ItemList" parent="Equip"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 144.0
margin/right = 159.0
margin/bottom = 219.0

[node name="Inventory" type="ItemList" parent="Equip"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 255.0
margin/top = 10.0
margin/right = 114.0
margin/bottom = 11.0

[node name="Drop" type="Button" parent="Equip"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 635.0
margin/top = 170.0
margin/right = 678.0
margin/bottom = 190.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Drop"
flat = false

[node name="Use" type="Button" parent="Equip"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 640.0
margin/top = 255.0
margin/right = 677.0
margin/bottom = 275.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Use"
flat = false

[node name="Uneq" type="Button" parent="Equip"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 630.0
margin/top = 340.0
margin/right = 676.0
margin/bottom = 360.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Uneq"
flat = false

[node name="QuestsList" type="Tabs" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Tree" type="Tree" parent="QuestsList"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 715.0
margin/bottom = 390.0
custom_fonts/font = ExtResource( 2 )

[node name="Quest" type="StreamPlayer" parent="QuestsList"]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Skills" type="Tabs" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[connection signal="item_selected" from="Equip/LeftHand" to="." method="_on_LeftHand_item_selected"]

[connection signal="item_selected" from="Equip/RightHand" to="." method="_on_RightHand_item_selected"]

[connection signal="item_selected" from="Equip/Legs" to="." method="_on_Legs_item_selected"]

[connection signal="item_selected" from="Equip/Feets" to="." method="_on_Feets_item_selected"]

[connection signal="item_selected" from="Equip/Body" to="." method="_on_Body_item_selected"]

[connection signal="item_selected" from="Equip/Head" to="." method="_on_Head_item_selected"]

[connection signal="item_selected" from="Equip/Inventory" to="." method="_on_Inventory_item_selected"]

[connection signal="pressed" from="Equip/Drop" to="." method="_on_Drop_pressed"]

[connection signal="pressed" from="Equip/Use" to="." method="_on_Use_pressed"]

[connection signal="pressed" from="Equip/Uneq" to="." method="_on_Uneq_pressed"]


